--- a/src/styl/vars.styl
+++ b/src/styl/vars.styl
@@ -2,7 +2,7 @@ order = join(" ",
   base codemirror chart-configs project-configs,
   chartedit-inner chartedit-inner-active,
   code-ctrl code-error code-tabs code-tabs-src code-tabs-view,
-  chart-dimension data-field colorpicker chart-modal,
+  chart-dimension data-file data-field colorpicker chart-modal,
   fullscreen-dimmer chartedit-active ,
   base-modal nav-top,
   chartedit-fullscreen chartedit-fullscreen-active fullscreen-err,
